{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "BuildMenu",
            "id": "4ff64ea1-3b0b-4742-a4c0-ebb1bf810edf",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "4811d4e2-9018-4805-87a8-47254f817263",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "83068465-2f9f-42b5-8694-ef7cf779bfbb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "921f7e09-2424-4b50-95cf-0410d4f16c67",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "f7444b6a-fcf5-4efc-8445-99e24c8688db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HardClose",
                    "type": "Button",
                    "id": "251c0474-be44-4538-b9aa-f0b426925470",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ad70ca2-bcec-4f7a-9b5d-a5c2f44d9321",
                    "path": "<Keyboard>/Enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0f8f212-fedc-4db3-93c0-5c8fb909850a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12e0fcf7-f954-4f34-83cf-1f0341e6d5b7",
                    "path": "<Keyboard>/Escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a263561-0764-4a7e-a3cc-58a4ffcdfa8e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1896fac1-e0fd-4b27-8f05-f0b46cd0873d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efa1b607-41c6-41af-8923-3a1e41789975",
                    "path": "<Keyboard>/Escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61cfa30b-61fb-4c04-880d-b6d6f185fea1",
                    "path": "<Keyboard>/B",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HardClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "5998d237-1948-4d00-ba0d-78a5d9dc33d4",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "1e767169-7147-4e94-8765-3aff7a8e32b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "785de981-987a-402a-8c96-6ff4d0fbc760",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BuildMenu",
                    "type": "Button",
                    "id": "4c69f4af-6920-44ce-b686-0c74316bb0ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "82aada8c-f1bb-4e5f-8c4b-715455021f07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f7a6f25e-9b34-43a2-b181-829cd8729dd9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "cb82e378-9dea-454f-a86a-2e50344f0524",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a5a95558-cebc-43cf-adde-9c1b6c088277",
                    "path": "<Keyboard>/W",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "835aac2f-526f-4c71-88ef-bb736bb19cae",
                    "path": "<Keyboard>/S",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9fe39397-0b75-4de2-866c-fc1508993154",
                    "path": "<Keyboard>/A",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a347c758-c7e3-48ed-8655-c5ce004200a0",
                    "path": "<Keyboard>/D",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6456c52b-799d-4f5c-826a-ad7d92092177",
                    "path": "<Keyboard>/B",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BuildMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bdefea8-8e74-4f75-835b-3b8733124af1",
                    "path": "<Keyboard>/E",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseMenu",
            "id": "58ad6830-0eb0-4896-9b6b-bdfe4229bc4e",
            "actions": [
                {
                    "name": "Resume",
                    "type": "Button",
                    "id": "ecc22374-e60d-4ab9-9b9e-4730fd6f2e86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1d1b01cd-b328-4e77-8a46-1960961593fa",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SIMenu",
            "id": "de1ce2d2-5018-4f10-b0f4-5d19694720ab",
            "actions": [
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "4ae0024a-d78a-48b6-acb7-c648db6585b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d14c1e9-c975-4b69-b756-5080c2612ae8",
                    "path": "<Keyboard>/Escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        }
    ]
}